# SmartThings_translation_web_app

./: .dockerignore  .gitignore  Dockerfile  Mac_ui.scpt  README.md  Readme.txt  bx_guideline_engine.py  checker_service.py  go-webui.bat  highlight_keywords.py  list_gemini_models.py  list_models.py  main.py  mapping_manager.py  model_handler.py  prompt_builder.py  prompt_modules.py  pyproject.toml  rag_db_builder.py  rag_retriever.py  requirements.txt  run_mac.command  sheet_langs.json  translation_checker_gemini_1.2 copy.py  verify_models.py
.claude/: settings.json
.claude/commands/: st-audit.md  st-edit.md  st-glossary.md  st-highlight.md  st-ragdb.md  st-sections.md  st-textbook.md  (+1 more)
backend/: checker_service.py  main.py
docs/: CHANGELOG.md  Google Cloud AI 서비스 엔터프라이즈 약관 확인 결과.md  comprehensive_rules.md  handover_20260512.md  implementation_plan.md  prompt_architecture.html  prompts_for_chat.md  smartthings_translation_agent_skill_plan.md  token_cost_report.md  user_guide.md  walkthrough.md
frontend/: app.js  index.html  style.css
rag_db/: cn_tone_flags.json
scripts/: token_cost_report.py  token_cost_report_cell_rag.py
static/: app.js  demo.html  index.html  rag_viewer.html  style.css  universe.html
tests/: (CX Center) SmartThings_2.0_Story_Contents_006_0319_review_report_20260519_143205.txt  (CX Center) SmartThings_2.0_Story_Contents_006_0319_review_report_20260519_144423.txt  run_glossary_fixture_check.py  test_glossary_store.py  test_model_handler.py  test_prompt_builder.py  test_rag_lookup.py  test_review_summary.py  test_text_workbook_service.py
(+95 files in other folders)
